# cholla_chem

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.IN  README.md  constants.py  index.html  ligand_smiles_data_complete.csv  main.py  mkdocs.yml  name_to_smiles.py  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
cholla_chem/: __init__.py  cli.py  datatypes.py  main.py  smiles_selector.py
cholla_chem/datafiles/: chemical_name_tokens.json
cholla_chem/name_manipulation/: manipulate_names.py  peptide_shorthand_handler.py  split_names.py  unicode_normalization.py
cholla_chem/resolvers/: chemspipy_resolver.py  cirpy_resolver.py  manual_resolver.py  opsin_resolver.py  (+1 more)
cli/: index.html
contributing/: index.html
core/: __init__.py  main.py
docs/: cli.md  contributing.md  getting_started.md  index.md  installation.md  name_manipulation.md  reference.md  resolvers.md  smiles_selection.md
examples/: example_notebook.ipynb
getting_started/: index.html
installation/: index.html
name_manipulation/: index.html
placeholder_name/: __init__.py  main.py  smiles_selector.py
reference/: index.html
resolvers/: index.html
scripts/: build_flashtext_ocr_maps.py
search/: search_index.json
smiles_selection/: index.html
tests/: test_chemspipy_resolver.py  test_cirpy_resolver.py  test_main.py  test_manual_resolver.py  test_ocr_map_consistency.py  test_opsin_resolver.py  test_pubchem_resolver.py  test_pubchem_resolver_batch.py  test_smiles_selector.py  test_split_name_name_manipulation.py  test_structural_formula_resolver.py
(+43 files in other folders)
