[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cholla_chem"
version = "0.2.0"
authors = [
    {name = "De Novo Chem Team", email = "carson.britt@denovochem.com"}
]
description = "Name-to-SMILES conversion"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/denovochem/cholla_chem"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
cholla_chem = [
    "datafiles/*.json",
    "datafiles/name_dicts/*.json",
    "datafiles/opsin-cli-2.9.0-jar-with-dependencies.jar",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[project.scripts]
cholla-chem = "cholla_chem.cli:main"
